feat:  auto-search on edittext text change

--- a/EdittextChangeObserve/app/src/main/res/values/strings.xml
+++ b/EdittextChangeObserve/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Rx+Retrofit</string>
+    <string name="app_name">Text Change Observe</string>
+    <string name="enter_query">Search person</string>
 </resources>
