feat: add buffer() example

--- a/RxOperators/app/src/main/res/values/strings.xml
+++ b/RxOperators/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="transformational_operators">Transformational</string>
     <string name="types_of_operators">Types of Operators</string>
     <string name="buffer_operator">Buffer Operator</string>
+    <string name="see_logs">See Android monitor info logs</string>
 </resources>
